--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-loader": "^2.4.2",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^3.0.5",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
